--- a/exercícios/ex001/index.html
+++ b/exercícios/ex001/index.html
@@ -6,6 +6,7 @@
     <title>Meu primeiro exercício </title>
 </head>
 <body>
+    site
     <h1>Olá mundo</h1>
     <hr>
     <p>Esse e meu primeiro progrma em html</p>
